--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,5 @@
-/*
-Colors:
-
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
-
-*/
-
 /* Import font */
-@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
 /* GENERIC */
 * {
@@ -17,18 +8,9 @@ White: #FFF
 }
 
 body{
-    font-family: 'Signika';
+    font-family: 'Open Sans';
+    font-weight: 400;
     color: #1A1A1A;
-}
-
-.rowPadding{
-    padding: 50px 50px;
-}
-
-.borderBottom{
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    display: inline-block;
 }
 
 h1{
@@ -37,6 +19,20 @@ h1{
 h2{
     font-size: 42px;
 }
+h3{
+    font-size: 32px;
+}
+
+.rowPadding{
+    padding: 50px 50px;
+}
+
+.borderBottom{
+    border-bottom-width: 4px;
+    border-bottom-style: solid;
+    display: inline-block;
+}
+
 /* SECTION: navbarSection */
 #navbarSection{
     display: flex;
@@ -45,13 +41,25 @@ h2{
     align-items: center;
     padding-top: 25px;
     padding-bottom: 25px;
+    position: fixed;
+    top: 0px;
+    box-sizing: border-box;
+    height: 90px;
+    z-index: 50;
+    background-color: white;
 }
-#navbarSection img{
-    width: 10%;
+#navbarSection #spotifyHome{
+    width: 15%;
 }
+#navbarSection #spotifyHome img{
+    width: 100%;
+}
+
 #navbarSection nav a{
     text-decoration: none;
     padding: 20px;
+    font-size: 24px;
+    color: #1A1A1A;
 }
 
 /* SECTION: bannerSection */
@@ -61,17 +69,22 @@ h2{
     background-position: center;
     background-size: cover;
     height: 600px;
+    position: relative;
+    margin-top: 90px;
 }
-#bannerSection > *{
+#bannerSection > div{
     color: #FFF;
     text-align: center;
-    position: relative;
-    top: 20%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
 }
 #bannerSection p{
     font-size: 30px;
-    width: 45%;
+    width: 50%;
     margin: 30px auto;
+    font-weight: 300;
 }
 
 /* SECTION: advantagesSection */
@@ -90,8 +103,8 @@ h2{
     margin: 100px auto;
 }
 #advantagesSection #advantages-items .adv-item{
-    width: 33%;
-    padding: 0 50px;
+    width: 33.3%;
+    padding: 0 30px;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -103,26 +116,60 @@ h2{
 #advantagesSection #advantages-items .adv-item .adv-title{
     color: #00B172;
     font-size: 32px;
+    font-weight: 700;
     margin: 15px auto 30px;
+    text-align: center;
 }
 #advantagesSection #advantages-items .adv-item .adv-body{
     font-size: 24px;
+    text-align: center;
+    font-weight: 300;
+    padding: 0 20px;
 }
 
 /* SECTION: actionsSection */
 #actionsSection{
     background-color: #00B172;
-    padding: 50px;
+    padding: 80px;
     color: #FFF;
     margin: 0 50px 80px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
 }
-#actionsSection h2{
+
+#actionsSection > *{
+    width: 50%;
+}
+
+#actionsSection #left-text h2{
     border-bottom-color: #FFF;
     margin-bottom: 40px;
 }
-#actionsSection .action-item{
+#actionsSection #left-text .action-item{
     margin-bottom: 40px;
+    width: 60%;
 }
-#actionsSection .action-item h3{
+
+#actionsSection #left-text .action-item h3{
     margin-bottom: 20px ;
+}
+#actionsSection #left-text .action-item p{
+    font-size: 24px;
+    font-weight: 300;
+}
+
+#actionsSection img#spotifyApp{
+    width: 320px;
+    float: right;
+}
+
+#actionsSection img#spotifyLogo{
+    position: absolute;
+    width: 150px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
